--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,14 +4,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+<video webkit-playsinline playsinline autoplay loop muted id="backgroundvideo">
+    <source src="assets/video/backgroundvideo.mp4" type='video/mp4; codecs="h.264"'>
+    <source src="assets/video/backgroundvideo.webm" type="video/webm">
+</video>
 </ion-content>
