--- a/src/pages/etc/etc.html
+++ b/src/pages/etc/etc.html
@@ -1,15 +1,7 @@
-<!--
-  Generated template for the EtcPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>etc</ion-title>
+    <ion-title>기타</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
