--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,22 +1,27 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title text-center>안셈</ion-title>
   </ion-navbar>
 </ion-header>
 
 <video webkit-playsinline playsinline autoplay loop muted id="backgroundvideo">
-  <source src="assets/video/bg_video_2.mp4" type='video/mp4; codecs="h.264"'>
-  <source src="assets/video/bg_video_2.webm" type="video/webm">
+  <source src="assets/video/bg_video_1.mp4" type='video/mp4; codecs="h.264"'>
+  <source src="assets/video/bg_video_1.webm" type="video/webm">
+  <p>이 문장이 보인다면 HTML 5 의 video Tag 를 지원하지 않는 Web Browser 를 사용하고 계시는 겁니다.</p>
 </video>
 
 <ion-content>
-
-   <div id="bg_black" style="position: relative;">
-    <div style="position: absolute; top: 30%; left: 50%; transform: translate(-50%, -30%); min-width: 90%;">
-      <h1 text-center ion-text>오늘 하루는 어땠어? 가나다라마바사ㅇㅁㅇㅁㄴㅇ</h1>
-      <p ion-text text-right padding>- 안셈님이 질문합니다</p>
+  <div id="bg_black">
+    <div class="flex-item post-question">
+      <div>
+        <h1 ion-text text-center>오늘 하루는 어땠어? 느껴져 딱 목소리에서 누가 또 네 심기에 손댔어 맞아 전부 그 사람이 잘못했어</h1>
+        <p ion-text text-right padding>- 감아 / 로꼬</p>
+      </div>
     </div>
-    <button ion-button block color="danger" style="position: absolute; bottom: 10%; left: 10%; width: 80%;" (click)="openPosts()">작성하기</button>
+    <div class="flex-item post-btn-wrap">
+      <div>
+        <button ion-button block color="danger" (click)="openPosts()">작성하기</button>
+      </div>
+    </div>
   </div>
-  
 </ion-content>
