--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -1,25 +1,18 @@
-<!--
-  Generated template for the ListPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>list</ion-title>
+    <ion-title>모아보기</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content>
   <ion-item>
-      <ion-datetime color="light" displayFormat="YYYY년 MM월" [(ngModel)]="pickDate"></ion-datetime>
+    <ion-datetime color="light" displayFormat="YYYY년 MM월" [(ngModel)]="pickDate"></ion-datetime>
   </ion-item>
-   <button ion-button icon-only (click)="daysConfig()">
-      <ion-icon name="calendar"></ion-icon>
-    </button>  
+
+  <button ion-button icon-only (click)="daysConfig()">
+    <ion-icon name="calendar"></ion-icon>
+  </button>  
   
   <ion-list>
     <ion-item>
