--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,8 @@
 <ion-tabs color="dark">
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="List" tabIcon="albums"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Etc" tabIcon="settings"></ion-tab>
+<!--  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>-->
+  <ion-tab [root]="tab1Root" tabIcon="home"></ion-tab>
+<!--  <ion-tab [root]="tab2Root" tabTitle="List" tabIcon="albums"></ion-tab>-->
+  <ion-tab [root]="tab2Root" tabIcon="albums"></ion-tab>
+<!--  <ion-tab [root]="tab3Root" tabTitle="Etc" tabIcon="settings"></ion-tab>-->
+  <ion-tab [root]="tab3Root" tabIcon="settings"></ion-tab>
 </ion-tabs>
