--- a/src/pages/etc/question/question.html
+++ b/src/pages/etc/question/question.html
@@ -1,19 +1,38 @@
+<!--
+  Generated template for the QuestionPage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
+
   <ion-navbar>
-    <ion-title>question</ion-title>
-    <ion-buttons end>
+    <ion-buttons start left>
       <button ion-button icon-only (click)="dismiss()">
+        <ion-icon name="md-arrow-back"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title>질문하기</ion-title>
+    <ion-buttons end right>
+      <button ion-button icon-only>
         <ion-icon name="md-checkmark"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
+
 </ion-header>
 
-<ion-content padding>
-  <div>
-    <input type="text" placeholder="질문 입력">
-  </div>
-  <div>
-    <input type="text" placeholder="작성자">
+
+<ion-content>
+  <div class="question-wrap">
+    <ion-item padding>
+      <ion-label color="dark" stacked>작성자</ion-label>
+      <ion-input type="text" placeholder="작성자명을 입력해주세요." max="10"></ion-input>
+    </ion-item>
+    <br>
+    <ion-item padding>
+      <ion-label color="dark" stacked>질문</ion-label>
+      <ion-textarea placeholder="질문을 입력해주세요." max="28"></ion-textarea>
+    </ion-item>
   </div>
 </ion-content>
