[2017-06-03 이경환] 오늘 배경 고르기 / other branch

--- a/src/pages/etc/etc.html
+++ b/src/pages/etc/etc.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content style="background-image: url(assets/images/bg_img_3.jpg);">
+<ion-content [ngStyle]="{'background-image': bg_url}">
   <div id="bg_black">
     <ion-list>
       <button ion-item (click)="openNotification()">
