--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 
-<ion-content style="background-image: url(assets/images/bg_img_3.jpg);">
+<ion-content [ngStyle]="{'background-image': bg_url}">
 <!--
   <video webkit-playsinline playsinline autoplay loop muted id="backgroundvideo">
     <source src="assets/video/bg_video_1.mp4" type='video/mp4; codecs="h.264"'>
