오늘 날짜 작성글 여부확인(수정중)

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,6 +24,7 @@
     <div class="flex-item post-btn-wrap">
       <div>
         <button ion-button block color="danger" (click)="openPosts()">작성하기</button>
+        <button ion-button block color="danger" (click)="test()">디비삭제(테스트)</button>
       </div>
     </div>
   </div>
