--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
     </div>
     <div class="flex-item post-btn-wrap">
       <div>
-        <button ion-button block color="danger" (click)="openPosts()" *ngIf="question">작성하기</button>
+        <img src="assets/images/pencil_icon.png" width="14%" height="14%" style="margin-left: auto; margin-right: auto;	display: block;" (click)="openPosts()" *ngIf="question">
       </div>
     </div>
   </div>
