--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs color="main">
+<ion-tabs color="transparent" no-shadow>
 <!--  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>-->
   <ion-tab [root]="tab1Root" tabIcon="text"></ion-tab>
 <!--  <ion-tab [root]="tab2Root" tabTitle="List" tabIcon="albums"></ion-tab>-->
