탭 아이콘 변경

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
 <ion-tabs color="transparent" no-shadow>
 <!--  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>-->
-  <ion-tab [root]="tab1Root" tabIcon="text"></ion-tab>
+  <ion-tab [root]="tab1Root" tabIcon="ios-remove"></ion-tab>
 <!--  <ion-tab [root]="tab2Root" tabTitle="List" tabIcon="albums"></ion-tab>-->
-  <ion-tab [root]="tab2Root" tabIcon="albums"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="ios-menu-outline"></ion-tab>
 <!--  <ion-tab [root]="tab3Root" tabTitle="Etc" tabIcon="settings"></ion-tab>-->
-  <ion-tab [root]="tab3Root" tabIcon="settings"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="ios-more"></ion-tab>
 </ion-tabs>
