글작성 엔터시 백업 오류 수정

--- a/src/pages/etc/etc.html
+++ b/src/pages/etc/etc.html
@@ -22,9 +22,9 @@
       <button ion-item (click)="openAppRate()">
         안셈 평가하기
       </button>
-      <!-- <button ion-item (click)="openBackUp()">
+      <button ion-item (click)="openBackUp()">
         백업/복구
-      </button> -->
+      </button> 
       <button ion-item (click)="openReset()">
         초기화
       </button>
